--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,74 @@ Green: #00B172
 White: #FFF
 
 */
+
+.textGreen{
+    color:#1A1A1A;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
+#div1{
+    height: 100vh;
+}
+#nav1{
+    height: 10%;
+    margin: 15px 15px 0px 15px;
+    display: flex;
+    justify-content: space-between;
+}
+#nav1Ul{
+    display: flex;
+    list-style:none;
+
+}
+#nav1Ul li{
+ margin: 10px;
+}
+
+
+#div2{
+    text-align: center;
+}
+#div2 h2{
+    
+    margin-top: 40px;
+    
+}
+#div2Div{
+    margin-left: 5em ;
+    margin-right: 5em auto ;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+
+#div3{
+    background: #00B172;
+
+}
+
+#div3Div{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 10em;
+    padding-top: 3em;
+    
+}
+
+#div3Div+div{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+#div3Logo{
+    position: absolute;
+    
+    
+}
